--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@ header{position: absolute;top:0;left:0;z-index: 20;width:100%;border-bottom:1px 
 .menuList{font-size:0;padding:0}
 .menuItems{list-style: none;display:inline-block;text-align:center;color:#fff;}
 .menuItems a{font-size:15px;display:inline-block;padding:1rem;transition: 0.9s;color: #fff;}
-.menuItems a.onItem{border-bottom:2px solid skyblue;color:skyblue}
+.menuItems a.onItem{border-bottom:3px solid skyblue;color:skyblue}
 .menuItems a:hover{color:cyan;}
 .menuItems.wd40{width:40%;margin-right:15%;}
 .menuItems.wd20{width:15%;}
@@ -16,11 +16,9 @@ header{position: absolute;top:0;left:0;z-index: 20;width:100%;border-bottom:1px 
 .linkDiv a{display:inline-block;margin:0 3rem;padding:0.5rem;border-bottom:2px outset #fff;}
 footer{position:fixed;bottom:0;left:0;width:100%;background:#555;color:#aaa;text-align:center;padding:0.5rem 0;box-sizing:border-box}
 .footLeftArea{display:inline-block;max-width:200px;width:100%;}
-#volSlider{width:calc(100% - 50px);margin: 0 0 3px;}
-#volSlider .rz-bubble{display:none;}
-#volSlider .rz-pointer{width:18px;height:18px;top:-7px;}
-#volSlider .rz-pointer:after{top:5px;left:5px;}
 .cursp{cursor: pointer;}
+#kakao-link-btn{background: none;border: 0;width: 18px;height: 18px;padding: 0;vertical-align: bottom;}
+#kakao-link-btn img{width:100%;height:100%;}
 .youClr{color:#ff0000}
 .wClr{color:#fff;}
 .subArea{position:absolute;top:52px;max-height:calc( 95% - 52px );left:0;width:100%;overflow-y:auto}
@@ -28,7 +26,7 @@ footer{position:fixed;bottom:0;left:0;width:100%;background:#555;color:#aaa;text
 .secTitle{margin-top:0;border-left:5px ridge skyblue;line-height:1;padding-left:2rem}
 .mgb0{margin-bottom:0}
 .radarWrap{width:50%;display: inline-block;vertical-align: top;box-sizing: border-box}
-.isSkTxt{padding:0 2rem}
+.isSkTxt{padding:0 2rem;float:right;}
 .isSkTxt h2{margin:0 0 2rem;word-wrap: break-word;word-break: keep-all}
 .slick-prev, .slick-next{width:30px;height:30px;}
 .slick-prev{left:-30px;}
@@ -36,6 +34,8 @@ footer{position:fixed;bottom:0;left:0;width:100%;background:#555;color:#aaa;text
 .slick-prev:before, .slick-next:before{font-family: "Font Awesome\ 5 Free";font-size:30px}
 .slick-prev:before{content:"\f191"}
 .slick-next:before{content:"\f152"}
+.slick-dots li button{background:white;border-radius: 17px;margin:1.5px auto;font-size:0;width:17px;height:17px;transition:.4s}
+.slick-dots li.slick-active button{background:skyblue; width:25px}
 .slideItem{padding:0.25rem;box-sizing: border-box;transition:0.5s;}
 .slideItem:hover{background-color:skyblue}
 .slideItem img{max-width:100%}
@@ -45,10 +45,14 @@ footer{position:fixed;bottom:0;left:0;width:100%;background:#555;color:#aaa;text
 .sItemTxt.yr2017{background:#2da53c;}
 .sItemTxt.yr2018{background:#03c31b;}
 .sItemTxt *{margin:0.5rem 0;}
+.tagBox{padding-left:20px;margin-top:20px;}
+.tagBox span{margin-left:10px;}
+.tagBox span:before{content:"#"}
 .mailArea{text-align:right;}
 .mailArea h2{margin-bottom:0.5rem}
 .mailArea h4{margin-top:0.5rem}
 .mailArea a{color:#fff}
+
 @media (min-aspect-ratio: 16/9) {
     .video-foreground { height: 330%; top: -115%; }
 }
@@ -62,13 +66,14 @@ footer{position:fixed;bottom:0;left:0;width:100%;background:#555;color:#aaa;text
     .isPc{display:none !important;}
     .textDiv{margin-top:3rem;position:static;display:inline-block;}
 }
-@media screen and (max-width: 820px){
-    .radarWrap{width:100%}
-    .isSkTxt{display:none;}
+@media screen and (max-width: 1120px){
+    .radarWrap{width:80%;display:block;margin:0 auto;}
+    .isSkTxt{float:none;width:100%;}
 }
 @media screen and (max-width: 620px){
     .subArea{position:absolute;top:48px;max-height:calc( 95% - 48px );left:0;width:100%;overflow-y:auto}
     .radarWrap{width:100%}
+    .isSkTxt{display:none;}
     .textDiv{font-size:20px}
     .menuItems.wd40{width:17%;margin-right:8%;}
     .menuItems.wd20{width:25%;}
