--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -72,7 +72,7 @@ footer{position:fixed;bottom:0;left:0;width:100%;background:#555;color:#aaa;text
 .mailArea h4{margin-top:0.5rem}
 .mailArea a{color:#fff}
 
-.video-foreground{background:url(/assets/img/chrome.jpg) no-repeat 50% 50%;background-size: cover}
+.video-foreground{background:url(../img/chrome.jpg) no-repeat 50% 50%;background-size: cover}
 @media (min-aspect-ratio: 16/9) {
     .video-foreground { height: 330%; top: -115%; }
 }
