모바일 최적화

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -21,7 +21,7 @@ footer{position:fixed;bottom:0;left:0;width:100%;background:#555;color:#aaa;text
 #kakao-link-btn img{width:100%;height:100%;}
 .youClr{color:#ff0000}
 .wClr{color:#fff;}
-.subArea{position:absolute;top:52px;max-height:calc( 95% - 22px );left:0;width:100%;overflow-y:auto}
+.subArea{position:absolute;top:52px;max-height:calc( 100% - 87px );left:0;width:100%;overflow-y:auto}
 
 .subArea::-webkit-scrollbar-track
 {
@@ -55,7 +55,7 @@ footer{position:fixed;bottom:0;left:0;width:100%;background:#555;color:#aaa;text
 .slick-dots li.slick-active button{background:#ffbe16; width:25px}
 .slideItem{padding:0.25rem;box-sizing: border-box;transition:0.5s;}
 .slideItem:hover{background-color:#ffbe16}
-.slideItem img{max-width:100%}
+.slideItem img{max-width:100%;margin:0 auto}
 .sItemTxt{background:#7790d4;padding:0.5rem;border-radius: 0 0 15px 0}
 .sItemTxt.yr2015{background:#697fbb;}
 .sItemTxt.yr2016{background:#526494;}
@@ -91,9 +91,9 @@ footer{position:fixed;bottom:0;left:0;width:100%;background:#555;color:#aaa;text
     .isSkTxt{float:none;width:100%;}
 }
 @media screen and (max-width: 620px){
-    .subArea{position:absolute;top:48px;max-height:calc( 95% - 75px );left:0;width:100%;overflow-y:auto}
+    .subArea{position:absolute;top:48px;max-height:calc( 100% - 99px );left:0;width:100%;overflow-y:auto}
     .radarWrap{width:100%}
-    .isSkTxt{display:none;}
+    .isSkTxt{font-size:12px;}
     .textDiv{font-size:20px}
     .menuItems.wd40{width:17%;margin-right:8%;}
     .menuItems.wd20{width:25%;}
