--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -390,13 +390,12 @@ footer {
   background: rgba(75, 115, 52, .76);
   color: #aaa;
   box-sizing: border-box;
-  padding-right: 10px 15px;
+  font-size:20px;
   .footer_btns {
     max-width: 1190px;
     margin: 0 auto;
     text-align: right;
-    padding: 5px;
-    font-size:20px;
+    padding: 7px 14px;
     .lf {
       float: left;
       padding: 0;
@@ -408,8 +407,8 @@ footer {
   #kakao-link-btn {
     background: none;
     border: 0;
-    width: 18px;
-    height: 18px;
+    width: 20px;
+    height: 20px;
     padding: 0;
     vertical-align: bottom;
 
@@ -423,8 +422,8 @@ footer {
     font-size: 28px;
 
     #kakao-link-btn {
-      width: 25px;
-      height: 25px;
+      width: 28px;
+      height: 28px;
     }
   }
 }
