--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -344,7 +344,7 @@ button {
     background: rgba(0, 129, 250, .7);
   }
 
-  &.yr2023 {
+  &.yr2023,&.yr2024 {
     background: rgba(0, 129, 250, .9);
   }
 
